welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
avancer(3)
avancer()